<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="MAIN" Id="{61fb59f7-cccf-4dc1-ac71-909a05e4fc8f}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	//Config : ST_Configuration;
	VariantControl : FB_VariantControl;
	
	Cell : FB_Cell;
    HMI : FB_HMI;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[// load machine config data
VariantControl(bLoadJSONFirstScan:=_TaskInfo[1].FirstCycle,
               bWriteJSON := HMI.HMItoPLC.variantControl.bExportJSON,
               Config := HMI.HMItoPLC.variantControl.Config);

// Don't execute anything until configuration data is loaded
IF VariantControl.bDone AND NOT VariantControl.bBusy THEN
    //Config := HMI.HMItoPLC.variantControl.Config;
    Cell(Config := HMI.HMItoPLC.variantControl.Config,
        HMItoPLC := HMI.HMItoPLC,
        PLCtoHMI => HMI.PLCtoHMI);

END_IF

// Run HMI as soon as machine config is loaded or failed to create config file
IF VariantControl.bDone THEN

    HMI.PLCtoHMI.variantControl.bNeedsCellDefinition := VariantControl.bLoadError;
    HMI();

END_IF]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="9" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="74" Count="1" />
      <LineId Id="28" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="117" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="106" Count="1" />
      <LineId Id="52" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="76" Count="0" />
      <LineId Id="70" Count="0" />
      <LineId Id="92" Count="0" />
      <LineId Id="124" Count="0" />
      <LineId Id="119" Count="1" />
      <LineId Id="118" Count="0" />
      <LineId Id="71" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>